iscsi targets and san integration

--- a/t11_iscsi_targets/iscsi_targets_notes.tex
+++ b/t11_iscsi_targets/iscsi_targets_notes.tex
@@ -1,3 +1,11 @@
+\documentclass[slides]{pgnotes}
+
+\title{iSCSI targets}
+
+\begin{document}
+
+\maketitle
+
 \section{Target provisioning
 operations}\label{target-provisioning-operations}
 
@@ -73,3 +81,6 @@ Our example above could require for example, \texttt{student} and
 If you want mutual authentication, the \texttt{outgoinguser} parameter
 works in the same way as \texttt{incominguser} to handle this. Obviously
 the initiator will need to be set up correctly too.
+
+\end{document}
+
